# CPP_Programmentwurf

./: .gitignore  CMakeLists.txt  README.md
Testpfad/include/: sample.h  test.h
Testpfad/src/: sample.cpp  test.cpp
assets/: logging.ini  sample.txt
include/: CCodegenerator.h  CTextToCPP.h  CTextToEscSeq.h  CTextToHexSeq.h  CTextToOctSeq.h  CTextToRawHexSeq.h  Options.h  Variable.h
src/: CCodegenerator.cpp  CMakeLists.txt  CTextToCPP.cpp  CTextToEscSeq.cpp  CTextToHexSeq.cpp  CTextToOctSeq.cpp  CTextToRawHexSeq.cpp  Options.cpp  Variable.cpp  main.cpp
